--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,7 +12,7 @@ phases:
  build:
      commands:
       - echo "teste" >> elb.txt
-      - sudo /bin/bash deploy.sh us-east-1 mono-trab-stack
+      - /bin/bash deploy.sh us-east-1 mono-trab-stack
  post_build:
      commands:
       - echo "DONE!!!!"
